--- a/app/src/main/res/layout/activity_add_freezer.xml
+++ b/app/src/main/res/layout/activity_add_freezer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="vvar90.freezer.Activities.AddFreezerActivity">
+    tools:context="vvar90.freezer.activities.AddFreezerActivity">
 
     <Button
         android:id="@+id/addFreezer"
