Change ListView for RecyclerView in FreezersActivity

--- a/app/src/main/res/layout/activity_freezer_food.xml
+++ b/app/src/main/res/layout/activity_freezer_food.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context="vvar90.freezer.activities.FreezerFoodActivity">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerViewItemFood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/listViewItemFood"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
