--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -5,16 +5,16 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/itemText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageView"
+        android:layout_toEndOf="@+id/snowFlakeImage"
         android:padding="30dp"
         android:textSize="20dp" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/snowFlakeImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -23,7 +23,7 @@
         app:srcCompat="@mipmap/snowflake" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/deleteFreezerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
